--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,5 @@
 services:
+  # Backend API service
   - type: web
     name: xidach-server
     env: node
@@ -15,10 +16,16 @@ services:
           type: web
           property: url
 
-  - type: static
+  # Frontend static site
+  - type: web
     name: xidach-client
+    env: static
     buildCommand: cd client && npm install && npm run build
-    staticPublishPath: client/build
+    staticPublishPath: ./client/build
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
     envVars:
       - key: REACT_APP_SERVER_URL
         fromService:
